# iot-home-automation-fw

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Kconfig  LICENSE  README.md  STM32WB5MMGHX_FLASH.ld  STM32WB5MMGHX_RAM.ld  iot-door-alarm Debug.launch  iot-door-alarm.ioc  iot-home-test Debug.launch  iot-home-test.ioc
Core/Inc/: main.h  shtc3.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
Core/Src/: main.c  shtc3.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
Core/Startup/: startup_stm32wb5mmghx.s
Drivers/STM32WBxx_HAL_Driver/Inc/: stm32wbxx_hal_i2c.h  stm32wbxx_ll_i2c.h
Drivers/STM32WBxx_HAL_Driver/Src/: stm32wbxx_hal_i2c.c  stm32wbxx_hal_uart.c
Project/Inc/: alarmefrigo.h  blinker.h  debouncer.h  fsm.h  tictoc.h  timer.h
Project/src/: alarmefrigo.cpp  fsm.cpp
app/: CMakeLists.txt  prj.conf
app/boards/: nucleo_wb55rg.overlay  std_nucleo_wb55rg.overlay
app/src/: fsm.c  fsm.h  main.c
application/next/: button.c  button.h
application/src/: button.c  button.h  main.c
doc/: FSMAlarm.xlsm  alarmeFrigo.ino
doc/CubeVersion/Inc/: alarmefrigo.h  tictoc.h
lib/: CMakeLists.txt
lib/include/: blinker.h  button.h
lib/src/: blinker.c  button.c
tests/blinker_test/: CMakeLists.txt  prj.conf
tests/blinker_test/boards/: nucleo_wb55rg.overlay
tests/bthome_sensor_template/: README.md  prj.conf
tests/button_test/: CMakeLists.txt  prj.conf
tests/thermometre/: CMakeLists.txt  prj.conf
zephyr/: prj.conf  requirements.txt
zephyr/boards/: nucleo_wb55rg.overlay
zephyr/scripts/: scan_decode.py
zephyr/src/: button.c  button.h  main.c
(+9 files in other folders)
